# tschedule

./: README.md  pyproject.toml
docs/: spec.md
systemd/: tschedule-dashboard.service
tests/: test_config.py  test_cron_convert.py  test_db.py  test_executor.py  test_notify.py  test_units.py
tschedule/: _dashboard_app.py  cli.py  config.py  cron_convert.py  db.py  executor.py  notify.py  units.py  watcher.py
